breadthFirstSearch works